--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,54 @@
       <artifactId>pagehelper</artifactId>
       <version>5.1.10</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.13</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20190722</version>
+    </dependency>
 
+    <dependency>
+      <groupId>com.baidu</groupId>
+      <artifactId>ueditor</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <!--SPRING DATA REDIS 技术2.0以后 的缓存环境配置有不一样的api  所以暂时用2.0以下
+        2.0以下对应的jedis就是jedis3.0以下的版本
+        -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+    <!--spring 提供的 数据访问层连接技术框架    -->
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.8.23.RELEASE</version>
+    </dependency>
+    <!--
+       easy excel的依赖
+       该组件底层通过apache的poi实现
+       -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>easyexcel</artifactId>
+      <version>2.1.3</version>
+    </dependency>
 
   </dependencies>
 </project>
